Fix upgrade menu overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -98,7 +98,7 @@ a.btn {
   text-align:center;
   // TODO(@Baine) make pretty pls
   overflow:auto;
-  height:100%;
+  height:80%;
 }
 
 
